# opensim-pythonwrap

./: .gitignore  CMakeLists.txt  README.md
NMBLTK/Actuators/: About.cpp  CMakeLists.txt  JointMoment.cpp  JointMoment.h  RegisterTypes.cpp  RegisterTypes.h  RegisterTypes_rdActuators.cpp  RegisterTypes_rdActuators.h  makefile  rdActuators.cpp  rdActuators.h  rdActuatorsDLL.cpp  rdActuatorsDLL.h  rdGeneralizedForceAtv.cpp  rdGeneralizedForceAtv.h  rdLinearSetPoint.cpp  rdLinearSetPoint.h  rdMuscleZajac.cpp  rdMuscleZajac.h  rdPolynomialSetPoint.cpp  rdPolynomialSetPoint.h  rdSetPoint.cpp  rdSetPoint.h  suSpringGeneralizedForce.cpp  suSpringGeneralizedForce.h
NMBLTK/Actuators/rdActuators/: rdActuators.dsp  rdActuators.vcproj
NMBLTK/Analyses/: About.cpp  CMakeLists.txt  InvestigationForward.cpp  InvestigationForward.h  InvestigationPerturbation.cpp  InvestigationPerturbation.h  RegisterTypes_suAnalyses.cpp  RegisterTypes_suAnalyses.h  rdAnalysisFactory.cpp  rdAnalysisFactory.h  suActuation.cpp  suActuation.h  suActuatorGeneralizedForces.cpp  suActuatorGeneralizedForces.h  suActuatorPerturbation.cpp  suActuatorPerturbation.h  suActuatorPerturbationIndependent.cpp  suActuatorPerturbationIndependent.h  suAnalyses.cpp  suAnalyses.h  suAnalysesDLL.cpp  suAnalysesDLL.h  suAnalysisFactory.cpp  suAnalysisFactory.h  suBodyIndAcc.cpp  suBodyIndAcc.h  suBodyIndAccCOM.cpp  suBodyIndAccCOM.h  suBodyIndPowers.cpp  suBodyIndPowers.h  suBodyKinematics.cpp  suBodyKinematics.h  suBodyPointIndAcc.cpp  suBodyPointIndAcc.h  suContact.cpp  suContact.h  suDecomp.cpp  suDecomp.h  suDecompHard.cpp  suDecompHard.h  (+40 more)
NMBLTK/Analyses/suAnalyses/: suAnalyses.dsp  suAnalyses.vcproj
NMBLTK/Applications/Forward/: CMakeLists.txt  Forward.vcproj  block_actuators.xml  forward.cpp  forward.xml  test_forward.xml
NMBLTK/Applications/IK/: CMakeLists.txt  simmIKSolverImpl.cpp  simmIKSolverImpl.h  simmInverseKinematicsTarget.cpp  simmInverseKinematicsTarget.h  solveIK.cpp
NMBLTK/Applications/MkModel/: CMakeLists.txt  mkModel.cpp
NMBLTK/Applications/Perturb/: CMakeLists.txt  Perturb.vcproj  perturb.cpp  setup.xml
NMBLTK/Models/Block/: CMakeLists.txt  block.sd  block_info  block_sar.c  makefile  rdBlock.cpp  rdBlock.h  rdBlockJNI_wrap.cxx
NMBLTK/Models/CGMALWalking01/: CMakeLists.txt  cgmalWalking01.cpp  cgmalWalking01.h  cgmalWalking01.sd
NMBLTK/Models/Hopper/: CMakeLists.txt  hopper_info  suHopper.cpp  suHopper.h
NMBLTK/Models/Slider/: CMakeLists.txt  makefile  slider.sd  slider_info  slider_sar.c  suSlider.cpp  suSlider.h
NMBLTK/Models/rdModelDll/: CMakeLists.txt  rdModelDll.cpp  rdModelJNI.i  rdModelJNI_wrap.cxx  stdafx.cpp
NMBLTK/SQP/: About.cpp  CMakeLists.txt  nrODS.h  paramopt.h  rdFSQP.cpp  rdFSQP.h  rdOptimizationTarget.cpp  rdOptimizationTarget.h  rdSQP.cpp  rdSQP.h  rdSQPDLL.cpp  rdSQPDLL.h
NMBLTK/SQP/Test/: quadTarget.h  rosenTarget.h  testFSQP.cpp  testFSQP1.cpp
NMBLTK/SQP/rdSQP/: rdSQP.dsp  rdSQP.vcproj
NMBLTK/Simulation/: About.cpp  CMakeLists.txt  rdSimulationDLL.cpp  rdSimulationDLL.h
NMBLTK/Simulation/Control/: rdControl.cpp  rdControl.h  rdControlConstant.cpp  rdControlConstant.h  rdControlLinear.cpp  rdControlLinear.h  rdControlLinearNode.cpp  rdControlLinearNode.h  rdControlObject.cpp  rdControlObject.h  rdControlObjectSet.cpp  rdControlObjectSet.h  rdControlSet.cpp  rdControlSet.h  rdController.cpp  rdController.h
NMBLTK/Simulation/Integrator/: Integrand.cpp  Integrand.h  rdIntegRKF.cpp  rdIntegRKF.h  rdIntegrator.cpp  rdIntegrator.h  rdIntegratorDLL.cpp  rdIntegratorDLL.h  rdRKF.cpp  rdRKF.h  rdRKF_fixed.cpp  rdRKF_fixed.h
NMBLTK/Simulation/Manager/: rdManager.cpp  rdManager.h  rdManagerDLL.cpp  rdManagerDLL.h
NMBLTK/Simulation/Model/: Investigation.cpp  Investigation.h  LoadModel.cpp  LoadModel.h  RegisterTypes.cpp  RegisterTypes.h  RegisterTypes_rdSimulation.cpp  RegisterTypes_rdSimulation.h  SimmKinematicsEngineClay.h  VectorFunctionForActuators.cpp  VectorFunctionForActuators.h  nmblKinematicsEngine.cpp  nmblKinematicsEngine.h  rdActuator.cpp  rdActuator.h  rdActuatorSet.cpp  rdActuatorSet.h  rdAnalysis.cpp  rdAnalysis.h  rdAnalysisFactory.cpp  rdAnalysisFactory.h  rdAnalysisSet.cpp  rdAnalysisSet.h  rdBody.cpp  rdBody.h  rdBodySet.h  rdCallback.cpp  rdCallback.h  rdCallbackSet.cpp  rdCallbackSet.h  rdContactForce.cpp  rdContactForce.h  rdContactForceSet.cpp  rdContactForceSet.h  rdDerivCallback.cpp  rdDerivCallback.h  rdDerivCallbackSet.cpp  rdDerivCallbackSet.h  rdForce.cpp  rdForce.h  (+28 more)
NMBLTK/Simulation/SDFast/: About.cpp  CMakeLists.txt  rdActuatedModelIntegCallback.cpp  rdActuatedModelIntegCallback.h  rdActuatedModel_SDFast.cpp  rdActuatedModel_SDFast.h  rdSDFast.cpp  rdSDFast.h  rdSDFastDLL.cpp  rdSDFastDLL.h  rdSDFastF.cpp  rdSDFastFWin.cpp  sdfast.h  sduforce.cpp
NMBLTK/Simulation/SIMM/: IKSolverInterface.h  ScalerInterface.h  dp.h  simmBody.cpp  (+63 more)
NMBLTK/Tools/: About.cpp  CMakeLists.txt  RegisterTypes_rdTools.cpp  RegisterTypes_rdTools.h  RootSolver.cpp  RootSolver.h  VectorFunctionUncoupledNxN.cpp  VectorFunctionUncoupledNxN.h  gcvspl.h  rd1to3VectorGCVSpline.cpp  rd1to3VectorGCVSpline.h  rdArray.h  rdArrayPtrs.h  rdBodyConstraint.cpp  rdBodyConstraint.h  rdEdge.cpp  rdEdge.h  rdEdges.cpp  rdEdges.h  rdEvent.h  rdException.cpp  rdException.h  rdFunction.cpp  rdFunction.h  rdFunctionSet.cpp  rdFunctionSet.h  rdGBodies.cpp  rdGBodies.h  rdGBody.cpp  rdGBody.h  rdGCVSpline.cpp  rdGCVSpline.h  rdGCVSplineSet.cpp  rdGCVSplineSet.h  rdGModel.cpp  rdGModel.h  rdIO.cpp  rdIO.h  rdLine.cpp  rdLine.h  (+101 more)
NMBLTK/Utilities/: CMakeLists.txt  convert.cpp  perturbStorage.cpp  rdConvertControls.cpp  rdConvertStorageToControls.cpp  rdSimplifyControls.cpp  storageAdd.cpp  storageIntegrate.cpp  storageMultiply.cpp  storageSubtract.cpp  suMakeGaitCycleM.cpp
Vendors/CFSQP/: About.cpp  CMakeLists.txt  cfsqp.c  cfsqpusr.h  copyright  makefile  osimCFSQPDLL.cpp  osimCFSQPDLL.h  qld.c  readme  sampl1.c  sampl1CC.cpp  sampl2a.c  sampl2b.c  sampl3.c  sampl4.c  sampl5.c  samplePerfOnly.cpp  suCFSQPDLL.cpp  suCFSQPDLL.h  version2.5d
Vendors/xerces-c_2_8_0/: CMakeLists.txt
(+7232 files in other folders)
