SET(KIT Actuators)
SET(UKIT ACTUATORS)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} 
		    ${OpenSim_SOURCE_DIR}/Vendors 
		    ${OpenSim_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src
		    ${OpenSim_SOURCE_DIR}/Tools)

SET(EXPORT_MACRO RD${UKIT}_EXPORTS)

LINK_LIBRARIES( rdTools rdSimulation)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
)

INSTALL_TARGETS(/lib/ rd${KIT})
INSTALL_FILES(/include/NMBLTK/${KIT} .h ${INCLUDE_FILES})
