SET(KIT SQP)
SET(UKIT SQP)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${NMBLApp_SOURCE_DIR} ${NMBLApp_SOURCE_DIR}/Vendors)

ADD_DEFINITIONS(-DRDSQP_EXPORTS -D_USRDLL -D__STDC__)

LINK_LIBRARIES( suCFSQP rdTools)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
)

INSTALL_TARGETS(${NMBLApp_BINARY_DIR}/LibDev/ rd${KIT})
