SET(KIT SQP)
SET(UKIT SQP)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors)

ADD_DEFINITIONS(-DRDSQP_EXPORTS -D_USRDLL -D__STDC__)

LINK_LIBRARIES( suCFSQP rdTools)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 


INSTALL_TARGETS(/lib/ rd${KIT})
INSTALL_FILES(/include/NMBLTK/${KIT} .h ${INCLUDE_FILES})
