SET(KIT Tools)
SET(UKIT TOOLS)

FILE(GLOB SOURCE_FILES *.cpp gcvspl.c)
FILE(GLOB INCLUDE_FILES *.h gcvspl.h)

INCLUDE_DIRECTORIES(${NMBLApp_SOURCE_DIR} ${NMBLApp_SOURCE_DIR}/Vendors ${NMBLApp_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

SET(EXPORT_MACRO RD${UKIT}_EXPORTS)

LINK_LIBRARIES( xerces-c_2)

ADD_LIBRARY(rd${KIT} SHARED SOURCE_FILES INCLUDE_FILES) 

SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
)

INSTALL_TARGETS(${NMBLApp_BINARY_DIR}/LibDev/ rd${KIT})