SET(KIT Tools)
SET(UKIT TOOLS)

FILE(GLOB SOURCE_FILES *.cpp gcvspl.c)
FILE(GLOB INCLUDE_FILES *.h gcvspl.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors ${OpenSim_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

SET(EXPORT_MACRO RD${UKIT}_EXPORTS)

LINK_LIBRARIES( debug xerces-c_2D optimized xerces-c_2)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

IF(WIN32)
	ADD_DEPENDENCIES(rd${KIT} xerces-c_2D)
ENDIF(WIN32)

ADD_DEPENDENCIES(rd${KIT} xerces-c_2)

SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
)

INSTALL_TARGETS(/lib/ rd${KIT})

INSTALL_FILES(/include/NMBLTK/Tools .h ${INCLUDE_FILES})

#
# Testing
#

IF (UNIX)
  ADD_DEFINITIONS(-fprofile-arcs -ftest-coverage)
  LINK_LIBRARIES(gcov)
ENDIF (UNIX)

ENABLE_TESTING()

IF (EXECUTABLE_OUTPUT_PATH)
  SET (TEST_PATH ${EXECUTABLE_OUTPUT_PATH})
ELSE (EXECUTABLE_OUTPUT_PATH)
  SET (TEST_PATH .)
ENDIF (EXECUTABLE_OUTPUT_PATH)
#
SUBDIRS(Test)
