SET(KIT CFSQP)
SET(UKIT CFSQP)

SET(SOURCE_FILES cfsqp.c qld.c suCFSQPDLL.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors )

ADD_DEFINITIONS("-DSU${UKIT}_EXPORTS -D__STDC__")

ADD_LIBRARY(su${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(${OpenSim_BINARY_DIR}/LibDev/ su${KIT})