SET(KIT CFSQP)
SET(UKIT CFSQP)

##
## Version stuff
##
SET(OPENSIM_SUCFSQP_LIBRARY_NAME su${KIT})
SET(OPENSIM_SUCFSQP_MAJOR_VERSION 0)
SET(OPENSIM_SUCFSQP_MINOR_VERSION 6)
SET(OPENSIM_SUCFSQP_BUILD_VERSION 1)
SET(OPENSIM_SUCFSQP_COPYRIGHT_YEARS "2005-6")
# comma separated list of authors
SET(OPENSIM_SUCFSQP_AUTHORS  "Clay_Anderson-Ayman_Habib_and_Peter_Loan") 


ADD_DEFINITIONS(-DOPENSIM_SUCFSQP_LIBRARY_NAME=${OPENSIM_SUCFSQP_LIBRARY_NAME}
-DOPENSIM_SUCFSQP_MAJOR_VERSION=${OPENSIM_SUCFSQP_MAJOR_VERSION}
-DOPENSIM_SUCFSQP_MINOR_VERSION=${OPENSIM_SUCFSQP_MINOR_VERSION}
-DOPENSIM_SUCFSQP_BUILD_VERSION=${OPENSIM_SUCFSQP_BUILD_VERSION}
-DOPENSIM_SUCFSQP_COPYRIGHT_YEARS="${OPENSIM_SUCFSQP_COPYRIGHT_YEARS}"
-DOPENSIM_SUCFSQP_AUTHORS="${OPENSIM_SUCFSQP_AUTHORS}"
-DOPENSIM_SUCFSQP_TYPE="Shared")

SET(SOURCE_FILES cfsqp.c qld.c suCFSQPDLL.cpp About.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors )

IF(WIN32)
ADD_DEFINITIONS("-DSU${UKIT}_EXPORTS -D__STDC__")
ELSE(WIN32)
ADD_DEFINITIONS("-DSU${UKIT}_EXPORTS")
ENDIF(WIN32)

ADD_LIBRARY(su${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib su${KIT})
INSTALL_FILES(/include/Vendors/${KIT} .h ${INCLUDE_FILES})
