SET(KIT CFSQP)
SET(UKIT CFSQP)

##
## Version stuff
##
SET(OPENSIM_CFSQP_LIBRARY_NAME osim${KIT})
SET(OPENSIM_CFSQP_MAJOR_VERSION 0)
SET(OPENSIM_CFSQP_MINOR_VERSION 7)
SET(OPENSIM_CFSQP_BUILD_VERSION 1)
SET(OPENSIM_CFSQP_COPYRIGHT_YEARS "2005-6")
# comma separated list of authors
SET(OPENSIM_CFSQP_AUTHORS  "Clay_Anderson-Ayman_Habib_and_Peter_Loan") 


ADD_DEFINITIONS(-DOPENSIM_CFSQP_LIBRARY_NAME=${OPENSIM_CFSQP_LIBRARY_NAME}
-DOPENSIM_CFSQP_MAJOR_VERSION=${OPENSIM_CFSQP_MAJOR_VERSION}
-DOPENSIM_CFSQP_MINOR_VERSION=${OPENSIM_CFSQP_MINOR_VERSION}
-DOPENSIM_CFSQP_BUILD_VERSION=${OPENSIM_CFSQP_BUILD_VERSION}
-DOPENSIM_CFSQP_COPYRIGHT_YEARS="${OPENSIM_CFSQP_COPYRIGHT_YEARS}"
-DOPENSIM_CFSQP_AUTHORS="${OPENSIM_CFSQP_AUTHORS}"
-DOPENSIM_CFSQP_TYPE="Shared")

SET(SOURCE_FILES cfsqp.c qld.c osimCFSQPDLL.cpp About.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors )

IF(WIN32)
ADD_DEFINITIONS("-DOSIM${UKIT}_EXPORTS -D__STDC__")
ELSE(WIN32)
ADD_DEFINITIONS("-DOSIM${UKIT}_EXPORTS")
ENDIF(WIN32)

ADD_LIBRARY(osim${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib osim${KIT})
INSTALL_FILES(/include/Vendors/${KIT} .h ${INCLUDE_FILES})
