SET(KIT Block)
SET(UKIT BLOCK)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${NMBLApp_SOURCE_DIR} ${NMBLApp_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

SET(EXPORT_MACRO "RDSDFAST_EXPORTS,_USRDLL")

LINK_LIBRARIES( rdTools rdSimulation rdSDFast)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
)

