SET(KIT Block)
SET(UKIT BLOCK)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

ADD_DEFINITIONS(-DRDSDFAST_EXPORTS -D_USRDLL)

LINK_LIBRARIES( rdTools rdSimulation rdSDFast)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib rd${KIT})
INSTALL_FILES(/include/NMBLTK/Models/${KIT} .h ${INCLUDE_FILES})
