SET(KIT hopper)
SET(UKIT HOPPER)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${NMBLApp_SOURCE_DIR} ${NMBLApp_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

ADD_DEFINITIONS(-DRDSDFAST_EXPORTS -D_USRDLL)

LINK_LIBRARIES( rdTools rdSimulation rdSDFast)

ADD_LIBRARY(su${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

