SET(KIT Slider)
SET(UKIT SLIDER)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${NMBLApp_SOURCE_DIR} ${NMBLApp_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

SET(EXPORT_MACRO "RDSDFAST_EXPORTS,_USRDLL")

LINK_LIBRARIES( rdTools rdSimulation rdSDFast)

ADD_LIBRARY(su${KIT} SHARED SOURCE_FILES INCLUDE_FILES) 

SET_TARGET_PROPERTIES(su${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
)

