SET(KIT Block)
SET(UKIT BLOCK)

FILE(GLOB SOURCE_FILES *.cpp *.c ${OpenSim_SOURCE_DIR}/OpenSim/Models/SIMMPipeline/4.1/*.cpp ${OpenSim_SOURCE_DIR}/OpenSim/Models/SIMMPipeline/4.1/*.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${XERCES_INCLUDE_DIR} ${OpenSim_SOURCE_DIR}/OpenSim/Models/SIMMPipeline/4.1)

ADD_DEFINITIONS(-DRDSDFAST_EXPORTS -D_USRDLL)

ADD_DEFINITIONS(-DSDFAST_ENGINE_EXPORTS -D_USRDLL)

LINK_LIBRARIES( rdTools rdSimulation SdfastEngine)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib rd${KIT})
INSTALL_FILES(/include/OpenSim/Models/${KIT} .h ${INCLUDE_FILES})
