SET(KIT Block)
SET(UKIT BLOCK)

FILE(GLOB SOURCE_FILES *.cpp *.c ${OpenSim_SOURCE_DIR}/OpenSim/DynamicsEngines/SdfastEngine/SIMMPipeline/*.cpp ${OpenSim_SOURCE_DIR}/OpenSim/DynamicsEngines/SdfastEngine/SIMMPipeline/*.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${XERCES_INCLUDE_DIR} ${OpenSim_SOURCE_DIR}/OpenSim/DynamicsEngines/SdfastEngine/SIMMPipeline)

LINK_LIBRARIES(osimSimulation osimSdfastEngine)

ADD_LIBRARY(rd${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

IF(WIN32)
SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES
	LINK_FLAGS "/DEF:${OpenSim_SOURCE_DIR}/OpenSim/DynamicsEngines/SdfastEngine/SIMMPipeline/SdfastModelDLL.def"
)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(rd${KIT} PROPERTIES ${EXCLUDE_IF_MINIMAL_BUILD} PROJECT_LABEL "Models - Block")

#INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /bin rd${KIT})
#IF(INSTALL_HEADERS)
#INSTALL_FILES(/include/OpenSim/Models/${KIT} .h ${INCLUDE_FILES})
#ENDIF(INSTALL_HEADERS)
