SET(KIT cgmalWalking01)
SET(UKIT CGMALWalking01)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${XERCES_INCLUDE_DIR})

ADD_DEFINITIONS(-DOSIMSDFASTENGINE_EXPORTS)

LINK_LIBRARIES( rdTools rdSimulation rdSDFast)

ADD_LIBRARY(${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 


