SET(KIT hopper)
SET(UKIT HOPPER)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${OpenSim_SOURCE_DIR}/Vendors/xerces-c-src2_4_0/src)

ADD_DEFINITIONS(-DSDFAST_ENGINE_EXPORTS -D_USRDLL)

LINK_LIBRARIES( rdTools rdSimulation SdfastEngine)

ADD_LIBRARY(su${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib su${KIT})
