SET(KIT Slider)
SET(UKIT SLIDER)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${XERCES_INCLUDE_DIR})

ADD_DEFINITIONS(-DRDSDFAST_EXPORTS -D_USRDLL)

LINK_LIBRARIES( rdTools rdSimulation rdSDFast)

ADD_LIBRARY(su${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib su${KIT})
INSTALL_FILES(/include/OpenSim/Models/${KIT} .h ${INCLUDE_FILES})
