SET(KIT gait23)
SET(UKIT GAIT23)

FILE(GLOB SOURCE_FILES *.cpp *.c ${OpenSim_SOURCE_DIR}/OpenSim/Models/SIMMPipeline/4.1/*.cpp ${OpenSim_SOURCE_DIR}/OpenSim/Models/SIMMPipeline/4.1/*.c)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${OpenSim_SOURCE_DIR} ${XERCES_INCLUDE_DIR} ${OpenSim_SOURCE_DIR}/OpenSim/Models/SIMMPipeline/4.1)

ADD_DEFINITIONS(-DSDFAST_ENGINE_EXPORTS -D_USRDLL)

LINK_LIBRARIES(rdTools rdSimulation suAnalyses SdfastEngine)

ADD_LIBRARY(${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

INSTALL_TARGETS(/lib/ RUNTIME_DIRECTORY /lib ${KIT})
